better hover; fixed big with loading new mix while current player is collapsed

--- a/less/collection.less
+++ b/less/collection.less
@@ -8,6 +8,7 @@
 		display: block;
 		white-space: nowrap;
 		position: relative;
+		margin-bottom:30px;
 		&:hover{
 			div.direction{
 				.transition();
