--- a/less/mixCard.less
+++ b/less/mixCard.less
@@ -26,7 +26,7 @@ div.mixCard {
 			border:5px solid rgba(236, 240, 241, 0.75);
 		}
 	}
-	&.hover{
+	&:hover, &.hover{
 		.transition();
 		div.icon {
 			.opacity(1);
@@ -98,7 +98,7 @@ div.mixCard {
 		display: none;
 	}
 	.popover-content {
-		max-height: 300px;
+		max-height: 320px;
 		overflow: auto;
 		.mix-tracks li {
 			cursor: pointer;
